--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <center><img class="second-slide" src="images/home-page/Schemes.jpg" alt="Second slide"></center>
+                    <center><img class="second-slide" src="images/home-page/Schemes.png" alt="Second slide"></center>
                     <div class="container">
                         <div class="carousel-caption relative">
                             <span>Govenment Schemes</span>
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="fourth-slide" src="images/home-page/establish.png" alt="Forth slide">
+                    <img class="fourth-slide" src="images/home-page/establish.jfif" alt="Forth slide">
                     <div class="container">
                         <div class="carousel-caption relative">
                             <span>Start a New profession</span>
