--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <div id="myCarousel" class="carousel slide banner-main" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="first-slide" src="images/home-page/connect.png" alt="First slide">
+                    <center><img class="first-slide" src="images/home-page/connect.png" alt="First slide"></center>
                     <div class="container">
                         <div class="carousel-caption relative">
                             <span style="color: white;">Connect With Community </span>
@@ -147,7 +147,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="fourth-slide" src="images/home-page/establish.jfif" alt="Forth slide">
+                    <center><img class="fourth-slide" src="images/home-page/establish.jfif" alt="Forth slide"></center>
                     <div class="container">
                         <div class="carousel-caption relative">
                             <span style="color: royalblue;">Start a New profession</span>
