made text of home page slide visible

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <center><img class="first-slide" src="images/home-page/connect.png" alt="First slide"></center>
                     <div class="container">
                         <div class="carousel-caption relative">
-                            <span style="color: white;">Connect With Community </span>
+                            <span style="color: white;text-shadow: 0 0 3px black, 0 0 5px rgb(0 0 0);">Connect With Community </span>
                             <!-- <h1>up to 25% Flat Sale</h1> -->
                             <p style="color: white;">Discover recruiters and job seekers nearby</p>
                                 <!-- <br> of a page when looking at its layout. The point of using Lorem Ipsum is that -->
@@ -115,8 +115,8 @@
                     <center><img class="second-slide" src="images/home-page/Schemes.png" alt="Second slide"></center>
                     <div class="container">
                         <div class="carousel-caption relative">
-                            <span style="color: white;">Govenment Schemes</span>
-                            <p style="color :white;">Schemes for rural development launched by the Central and State Government</p> 
+                            <span style="color: white;text-shadow: 0 0 3px black, 0 0 5px rgb(0 0 0);">Govenment Schemes</span>
+                            <p style="color :white;text-shadow: 0 0 3px black, 0 0 5px rgb(0 0 0);">Schemes for rural development launched by the Central and State Government</p> 
                             <!-- <p>It is a long established fact that a reader will be distracted by the readable content
                                 <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p> -->
                             <a class="buynow" href="community.html">Know more</a>
@@ -150,11 +150,11 @@
                     <center><img class="fourth-slide" src="images/home-page/establish.jfif" alt="Forth slide"></center>
                     <div class="container">
                         <div class="carousel-caption relative">
-                            <span style="color: royalblue;">Start a New profession</span>
+                            <span style="color: white;text-shadow: 0 0 3px black, 0 0 5px rgb(0 0 0);;">Start a New profession</span>
                             <!-- <h1>up to 25% Flat Sale</h1>
                             <p>It is a long established fact that a reader will be distracted by the readable content
                                 <br> of a page when looking at its layout. The point of using Lorem Ipsum is that</p> -->
-                            <p style="color: royalblue;">Establish your enterprise</p>
+                            <p style="color: white;text-shadow: 0 0 10px black, 0 0 5px rgb(0 0 0);">Establish your enterprise</p>
                             <a class="buynow" href="find others.html">Start</a>
                             <!-- <ul class="social_icon">
                                 <li> <a href="#"><i class="fa fa-facebook-f"></i></a></li>
